# cv_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
learning/machine_learning/00_numpy_vectorization/: 01_vectorization_speed_test.py
learning/machine_learning/01_regression_models/: 04_linear_regression_utils.py  05_linear_regression_model_comparison.py
learning/machine_learning/02_classification_models/: 01_diabetes_logistic_regression.py
src/: __init__.py
src/configs/: config.yaml  dataset.yaml  feature_extraction.yaml  fine_tuning.yaml
src/training/feature_extraction/: train_classifier.py
src/training/fine_tuning/: fine_tuning.py  rtdetr_train.py  rtdetr_training.py  train_transfer_learning.py  trainer.py
src/utils/: __init__.py  config.py  data_loader.py  logger.py  metrics.py
