[project]
name = "cv-learning"
version = "0.1.0"
description = "Dog Detection ML Framework with PyTorch"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "albumentations>=2.0.8",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
    "transformers>=5.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
transfer_learning = "src.training.fine_tuning.train_transfer_learning:main"
feature_extraction = "src.training.feature_extraction.train_classifier:main"
test_model = "src.training.fine_tuning.test_model:main"
